examples/datalog/12_errors/52_modulo_zero.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mod_zero
Knowledge graph 'test_mod_zero' created.
Switched to knowledge graph: test_mod_zero
> .kg use test_mod_zero
Switched to knowledge graph: test_mod_zero
> +nums[(10,), (0,)].
Inserted 2 fact(s) into 'nums'.
> result(X, Y) :- nums(X), Y = 100 ?- result(X, Y).
Script error: Parse error: Invalid term: '100 ?- result(X, Y)'
